use getLast and removeLast for clarity